--- a/index.html
+++ b/index.html
@@ -414,33 +414,33 @@
 		  <div class="row d-flex">
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/charu2004sharma/Budget-tracker-system" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
+				<a href="https://charu2004sharma.github.io/Budget-tracker-system/" class="block-20 zoom-effect" style="background-image: url('images/proj_1.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/charu2004sharma/Budget-tracker-system">Budget Tracker using HTML, CSS & JS</a></h3>
+				  <h3 class="heading"><a href="https://charu2004sharma.github.io/Budget-tracker-system/">Budget Tracker using HTML, CSS & JS</a></h3>
 				  <p> This digital tool that helps users manage their finances by tracking income, expenses, and overall spending. It is really easy to use.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry justify-content-end">
-				<a href="https://github.com/charu2004sharma/Movie-rating-app" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
+				<a href="https://charu2004sharma.github.io/Movie-rating-app/" class="block-20 zoom-effect" style="background-image: url('images/proj_2.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/charu2004sharma/Movie-rating-app">Movie rating site</a></h3>
+				  <h3 class="heading"><a href="https://charu2004sharma.github.io/Movie-rating-app/">Movie rating site</a></h3>
 				  <p>This is a web-based application that calculates the success rating or review ratings of a movie. The application contains user-friendly functionalities and features.</p>
 				</div>
 			  </div>
 			</div>
 			<div class="col-md-4 d-flex ftco-animate">
 				<div class="blog-entry">
-				<a href="https://github.com/charu2004sharma/Weather-forecast-" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
+				<a href="https://charu2004sharma.github.io/Weather-forecast-/" class="block-20 zoom-effect" style="background-image: url('images/proj_3.jpg');">
 				</a>
 				<div class="text mt-3 float-right d-block">
   
-				  <h3 class="heading"><a href="https://github.com/charu2004sharma/Weather-forecast-">Weather forecasting site</a></h3>
+				  <h3 class="heading"><a href="https://charu2004sharma.github.io/Weather-forecast-/">Weather forecasting site</a></h3>
 				  <p>This app provides local weather forecast world wide, the app provides the current temperature in Celsius and humidity percentage according to city time zone. </p>
 				</div>
 			  </div>
@@ -453,33 +453,33 @@
 		<div class="row d-flex">
 		  <div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
-			  <a href="https://github.com/charu2004sharma/Sliding-kitty-puzzle" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
+			  <a href="https://charu2004sharma.github.io/Sliding-kitty-puzzle/" class="block-20 zoom-effect" style="background-image: url('images/proj_4.jpg');">
 			  </a>
 			  <div class="text mt-3 float-right d-block">
 
-				<h3 class="heading"><a href="https://github.com/charu2004sharma/Sliding-kitty-puzzle">Sliding kitty puzzle</a></h3>
+				<h3 class="heading"><a href="https://charu2004sharma.github.io/Sliding-kitty-puzzle/">Sliding kitty puzzle</a></h3>
 				<p>This is a combination puzzle that challenges a player to slide pieces along certain routes (usually on a board) to establish a certain end-configuration.</p>
 			  </div>
 			</div>
 		  </div>
 		  <div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry justify-content-end">
-			  <a href="https://github.com/charu2004sharma/To-do-list" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
+			  <a href="https://charu2004sharma.github.io/To-do-list/" class="block-20 zoom-effect" style="background-image: url('images/proj_5.jpg');">
 			  </a>
 			  <div class="text mt-3 float-right d-block">
 
-				<h3 class="heading"><a href="https://github.com/charu2004sharma/To-do-list">To-do list</a></h3>
+				<h3 class="heading"><a href="https://charu2004sharma.github.io/To-do-list/">To-do list</a></h3>
 				<p>This is a list of items that need to be completed. The items on the list can range from simple activities like replying to an message, to more complex tasks.</p>
 			  </div>
 			</div>
 		  </div>
 		  <div class="col-md-4 d-flex ftco-animate">
 			  <div class="blog-entry">
-			  <a href="https://github.com/charu2004sharma/Image-to-URL" class="block-20 zoom-effect" style="background-image: url('images/proj_6.jpg');">
+			  <a href="https://charu2004sharma.github.io/Image-to-URL/" class="block-20 zoom-effect" style="background-image: url('images/proj_6.jpg');">
 			  </a>
 			  <div class="text mt-3 float-right d-block">
 
-				<h3 class="heading"><a href="https://github.com/charu2004sharma/Image-to-URL">Image to URL converter</a></h3>
+				<h3 class="heading"><a href="https://charu2004sharma.github.io/Image-to-URL/">Image to URL converter</a></h3>
 				<p>This tool simplifies pictures into link sharing by converting image files into web addresses (URLs). You simply upload your image, and the tool generates a unique URL for it. </p>
 			  </div>
 			</div>
